chore: clean up after the introduction of ScoreAnalysis (#400)
Score corruption analysis now reuses score analysis.
Also ties some loose ends which did not fit into
c6239331dab00e08b1ba6edf90d4fa642a723ce7.